src/objects/VerifyTx__VTX__c.object
<CustomObject>
    <description>Insurance benefit information provided by VTX</description>
    <fields>
        <fullName>Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Lookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Result</relationshipLabel>
        <relationshipName>Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Authorization_Requirement_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Address__c</fullName>
        <label>Client Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_City__c</fullName>
        <label>Client City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Date_of_Birth__c</fullName>
        <label>Client Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Member_ID__c</fullName>
        <label>Client Member ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Percent_In_Net_Co_Insur__c</fullName>
        <label>Client Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Percent_Out_of_Net_Co_Insurance__c</fullName>
        <label>Client Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_State__c</fullName>
        <label>Client State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Street__c</fullName>
        <label>Client Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_ZipCode__c</fullName>
        <label>Client ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Co_Insurance_Provider_Percent__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Coverage_Date_End__c</fullName>
        <label>Coverage Date End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Coverage_Date_Start__c</fullName>
        <label>Coverage Date Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Coverage__c</fullName>
        <label>Coverage</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Date_Of_Birth_Client__c</fullName>
        <label>Date Of Birth(Client)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Date_Of_Birth_Subscriber__c</fullName>
        <label>Date Of Birth(Subscriber)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_Family_payernotes_In_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_Family_payernotes_Out_of_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_inNtwk_Clientperc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_inNtwk_providperc__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_outNtwk_clientperc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduc_outNtwk_proviperc__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduct_Indiv_payernotes_In_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Deduct_Indiv_payernotes_Out_of_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__DeductibleFamily_amountTimePeriod__c</fullName>
        <label>Amount Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__DeductibleFamily_amount__c</fullName>
        <label>Deductible Met (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__DeductibleFamily_remaining__c</fullName>
        <label>Deductible Remaining (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__DeductibleFamily_totalTimePeriod__c</fullName>
        <label>Total Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__DeductibleFamily_total__c</fullName>
        <label>Deductible (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Group_Number__c</fullName>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Co_Payment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Remaining_Time_Period__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Remaining_Time_Period__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Level_Code__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__OtofNtwk_otOfPktFamily_remainingTimePe__c</fullName>
        <label>Remaining Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Co_Payment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_RemainingTimePerio__c</fullName>
        <label>RemainingTime Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_AmounttTmePeriod__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_RemainingTimePerio__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__OutoNtwk_DeduFamily_remainingTimePeriod__c</fullName>
        <label>Remaining Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Place_of_Service__c</fullName>
        <label>Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Plan_Product__c</fullName>
        <label>Plan/Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Plan_Sponsor__c</fullName>
        <label>Plan Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Provider_Percent_In_Net_Co_Insur__c</fullName>
        <label>Provider Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Provider_Percent_Out_of_Net_Co_Insurance__c</fullName>
        <label>Provider Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_ab_faci_outp_outof_netwk_copymnt__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_ab_faci_outp_outof_netwk_cpmt_amtprd__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_inpt_inntwk_copymt_pyrnts__c</fullName>
        <label>Payer Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_Cont__c</fullName>
        <label>Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_Payernotes__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_authreq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_authreuknq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_clntprc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_levlcode__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_noncovrd__c</fullName>
        <label>Non Covered?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_inntwk_perc__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_CoInsClint__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_CoInsProvi__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_Cont__c</fullName>
        <label>Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_PayerNotes__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_levcode__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_noncov__c</fullName>
        <label>Non Covered?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faci_outptnt_otofntwk_plcesrv__c</fullName>
        <label>Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_faciinp_outof_netwk_plsofsrv_cop__c</fullName>
        <label>Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_facilityinptnt_in_netwk_plsofsrv__c</fullName>
        <label>Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_facilityoutptnt_in_ntk_copymnt__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_inNtwrk_Contact__c</fullName>
        <label>Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Sub_abu_outOfNtwk_clntperc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_absefacility_in_netwk_copay_amtTprd__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abu_fac_outpt_in_netwk_amttiprd__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abu_faci_inp_outof_netwk_cpmt_amtpr__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abu_faci_inp_outof_networ_cpymt__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abu_facilityinptnt_in_netwr_copaymt__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abuse_facility_in_netwk_Clientperc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abuse_in_network_copay_amtTimeprd__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subs_abuse_outof_network_copaymt_amtprd__c</fullName>
        <label>Co-Payment(Time Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Address__c</fullName>
        <label>Subscriber Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_City__c</fullName>
        <label>Subscriber City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Date_of_Birth__c</fullName>
        <label>Subscriber Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Member_ID__c</fullName>
        <label>Subscriber Member ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_State__c</fullName>
        <label>Subscriber State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Street__c</fullName>
        <label>Subscriber Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_ZipCode__c</fullName>
        <label>Subscriber ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subst_abu_faci_outNtwk_authr_outptnt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subst_abuse_facility_outofNtk_Clnt_perc__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_ab_facility_in_net_Non_covered__c</fullName>
        <label>Non Covered?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_fac_in_net_authrequnknow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_in_network_auth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_in_network_leve__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_in_network_perc__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_innetw_contact__c</fullName>
        <label>Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_outofNtwk_Non_C__c</fullName>
        <label>Non Covered?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_outofNtwk_authr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_outofNtwk_conta__c</fullName>
        <label>Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_outofNtwk_level__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_facility_outofNtwk_perct__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_Clientperct__c</fullName>
        <label>Co-Insurance (Client Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_authreqUknwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_copayment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_levelcode__c</fullName>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_perct__c</fullName>
        <label>Co-Insurance (Provider Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_in_network_plcofserv__c</fullName>
        <label>Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Substance_abuse_outof_network_copayment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__VOB_ID__c</fullName>
        <label>VOB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__VOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VOB</label>
        <referenceTo>VerifyTx__Practice_Group__c</referenceTo>
        <relationshipLabel>Result</relationshipLabel>
        <relationshipName>Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__abuse_faci_outNtwk_authUknwn_outptnt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__abuse_facility_outofNtwk_authreqUknwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Requirement Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_amountTimePe__c</fullName>
        <label>Amount Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_amount__c</fullName>
        <label>Deductible Met (family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_remainingTim__c</fullName>
        <label>Remaining Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_remaining__c</fullName>
        <label>Deductible Remaining (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_totalTimePer__c</fullName>
        <label>Total Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_DeductibleFamily_total__c</fullName>
        <label>Deductible (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_amountTimePeriod__c</fullName>
        <label>Amount Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_amount_met__c</fullName>
        <label>Deductible Met (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_amountTimePeriod__c</fullName>
        <label>Amount Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_amount_met__c</fullName>
        <label>Out of Pocket Met (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_amountTime__c</fullName>
        <label>Amount Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_amount_met__c</fullName>
        <label>Out of Pocket Met (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_remainingT__c</fullName>
        <label>Remaining Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_remaining__c</fullName>
        <label>Out of Pocket Remaining (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_totalTimeP__c</fullName>
        <label>Total Time Period (family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_family_total__c</fullName>
        <label>Out of Pocket (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_remainingTimePeri__c</fullName>
        <label>Remaining Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_remaining__c</fullName>
        <label>Out of Pocket Remaining (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_totalTimePeriod__c</fullName>
        <label>Total Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_outOfPocket_total_Individual__c</fullName>
        <label>Out of Pocket (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_remainingTimePeriod__c</fullName>
        <label>Remaining Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_remaining__c</fullName>
        <label>Deductible Remaining (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_totalTimePeriod__c</fullName>
        <label>Total Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__in_network_total__c</fullName>
        <label>Deductible (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPock_Fam_payernotes_In_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPock_Fam_payernotes_Out_of_Network__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPocketFamily_amountTimePeriod__c</fullName>
        <label>Amount Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPocketFamily_amount__c</fullName>
        <label>Out of Pocket Met (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPocketFamily_remaining__c</fullName>
        <label>Out of Pocket Remaining (Family)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPocketFamily_totalTimePeriod__c</fullName>
        <label>Total Time Period (Family)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfPocketFamily_total__c</fullName>
        <label>Out of Pocket (Family)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__outOfpkt_Ind_In_Network_payernotes__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>